mvp 5 | add requests to statement service
